Partially implemented saving agents to json file.