@@ -1,12 +1,12 @@
 package cz.cuni.mff.kotal.backend.algorithm;
 
-import cz.cuni.mff.kotal.frontend.simulation.GraphicalVertex;
+
 import cz.cuni.mff.kotal.simulation.Agent;
 import cz.cuni.mff.kotal.simulation.graph.SimulationGraph;
 import cz.cuni.mff.kotal.simulation.graph.Vertex;
 
 import java.util.List;
-import java.util.stream.Collectors;
+
 
 public record Lines(SimulationGraph graph) implements Algorithm {
 
@@ -19,15 +19,18 @@ public record Lines(SimulationGraph graph) implements Algorithm {
 	 */
 	@Override
 	public Agent planAgent(Agent agent, long step) {
+		final long exit;
 		if (agent.getExit() < 0) {
-			List<Vertex> directionExits = graph.getEntryExitVertices().get((int) agent.getExitDirection()).stream().filter(vertex -> vertex.getType().isExit()).collect(Collectors.toList());
-			List<Vertex> directionEntries = graph.getEntryExitVertices().get((int) agent.getEntryDirection()).stream().filter(vertex -> vertex.getType().isEntry()).collect(Collectors.toList());
+			List<Vertex> directionExits = graph.getEntryExitVertices().get((int) agent.getExitDirection()).stream().filter(vertex -> vertex.getType().isExit()).toList();
+			List<Vertex> directionEntries = graph.getEntryExitVertices().get((int) agent.getEntryDirection()).stream().filter(vertex -> vertex.getType().isEntry()).toList();
 			int entryIndex = directionEntries.indexOf(graph.getVertex(agent.getEntry()));
 			entryIndex = directionEntries.size() - entryIndex - 1; // invert index
-			agent.setExit((GraphicalVertex) directionExits.get(entryIndex * directionExits.size() / directionEntries.size()));
+			exit = directionExits.get(entryIndex * directionExits.size() / directionEntries.size()).getID();
+		} else {
+			exit = agent.getExit();
 		}
 
-		List<Long> path = graph.getLines().get(agent.getEntry()).get(agent.getExit());
+		List<Long> path = graph.getLines().get(agent.getEntry()).get(exit);
 		if (path == null) {
 			return null;
 		}
